# simdsp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  format.sh
.github/workflows/: ci.yaml
bench/: convolution_engine.cpp  cpu_capabilities.cpp  system_info.cpp
include/simdsp/: cpu_capabilities.hpp  feature_macros.hpp  system_info.hpp
include/simdsp/convolution/: generic_block_convolution.hpp
src/: cpu_capabilities.cpp  system_info.cpp  system_info_json.cpp
src/convolution/: generic_block_convolution.cpp
src/dispatched/convolution/: generic_block_convolution.cpp
tests/: passes.cpp
utilities/: print_cpuinfo.cpp
